# PINN_Jax

./: Laplace.ipynb  asdf.py  config.yaml  equation.py  loss.py  main.py  model.py  plot.py  pointgenerate.py  profile.py  pyproject.toml  test.py  utils.py
logs/: logs_save.npy
logs/logs_save/: loss.npy  loss_P2INN.npy  loss_param.npy  parameters.npy  parameters_P2INN.npy  parameters_P2INN.npz  parameters_param.npy
